<package>
  <name>controller_manager_tests</name>
  <version>0.13.3</version>
  <description>controller_manager_tests</description>
  <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>
  <maintainer email="enrique.fernandez.perdomo@gmail.com">Enrique Fernandez</maintainer>
  <maintainer email="mathias.luedtke@ipa.fraunhofer.de">Mathias Lüdtke</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/controller_manager_tests</url>
  <url type="bugtracker">https://github.com/ros-controls/ros_control/issues</url>
  <url type="repository">https://github.com/ros-controls/ros_control</url>

  <author>Vijay Pradeep</author>
  <author>Adolfo Rodriguez Tsouroukdissian</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>controller_manager</build_depend>
  <build_depend>controller_interface</build_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>controller_interface</run_depend>
  <test_depend>rostest</test_depend>
  <test_depend>rosservice</test_depend>
  <test_depend>rosbash</test_depend>
  <test_depend>rosnode</test_depend>

  <export>
    <controller_interface plugin="${prefix}/test_controllers_plugin.xml"/>
  </export>
</package>
