<package format="2">
  <name>controller_manager_tests</name>
  <version>0.15.1</version>
  <description>Tests for the controller manager.</description>

  <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>
  <maintainer email="enrique.fernandez.perdomo@gmail.com">Enrique Fernandez</maintainer>
  <maintainer email="mathias.luedtke@ipa.fraunhofer.de">Mathias Lüdtke</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/controller_manager_tests</url>
  <url type="bugtracker">https://github.com/ros-controls/ros_control/issues</url>
  <url type="repository">https://github.com/ros-controls/ros_control</url>

  <author>Vijay Pradeep</author>
  <author>Adolfo Rodriguez Tsouroukdissian</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>controller_manager</depend>
  <depend>roscpp</depend>

  <test_depend>rosbash</test_depend>
  <test_depend>rosnode</test_depend>
  <test_depend>rosservice</test_depend>
  <test_depend>rostest</test_depend>

  <export>
    <controller_interface plugin="${prefix}/test_controllers_plugin.xml"/>
  </export>
</package>
