<?xml version="1.0"?>
<package format="2">
  <name>extended_robot_hw_tests</name>
  <version>0.15.1</version>
  <description>Robot HW Extension tests</description>
  <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pluginlib</build_depend>
  <depend>transmission_interface</depend>

  <exec_depend>pluginlib</exec_depend>

  <test_depend>hardware_interface</test_depend>
  <test_depend>resource_retriever</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>
  <test_depend>urdf</test_depend>

  <export>
	  <transmission_interface plugin="${prefix}/extended_plugins.xml" />
  </export>

</package>
