<package format="2">
  <name>hardware_interface</name>
  <version>0.11.1</version>
  <description>Hardware Interface base class.</description>
  <maintainer email="adolfo.rodriguez@pal-robotics.com">Adolfo Rodriguez Tsouroukdissian</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/ros-controls/ros_control/wiki</url>
  <url type="bugtracker">https://github.com/ros-controls/ros_control/issues</url>
  <url type="repository">https://github.com/ros-controls/ros_control</url>

  <author>Wim Meeussen</author>
  <author>Adolfo Rodriguez Tsouroukdissian</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <test_depend>rosconsole</test_depend>

  <export>
    <cpp cflags="-I${prefix}/include"/>
  </export>
</package>
