<package format="2">
  <name>hardware_interface</name>
  <version>0.12.0</version>
  <description>Hardware Interface base class.</description>
  <maintainer email="adolfo.rodriguez@pal-robotics.com">Adolfo Rodriguez Tsouroukdissian</maintainer>
  <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>
  <maintainer email="enrique.fernandez.perdomo@gmail.com">Enrique Fernandez</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/ros-controls/ros_control/wiki</url>
  <url type="bugtracker">https://github.com/ros-controls/ros_control/issues</url>
  <url type="repository">https://github.com/ros-controls/ros_control</url>

  <author>Wim Meeussen</author>
  <author>Adolfo Rodriguez Tsouroukdissian</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <test_depend>rosconsole</test_depend>
</package>
