<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hardware_interface</name>
  <version>0.19.3</version>
  <description>Hardware Interface base class.</description>

  <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>
  <maintainer email="enrique.fernandez.perdomo@gmail.com">Enrique Fernandez</maintainer>
  <maintainer email="mathias.luedtke@ipa.fraunhofer.de">Mathias Lüdtke</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/ros-controls/ros_control/wiki</url>
  <url type="bugtracker">https://github.com/ros-controls/ros_control/issues</url>
  <url type="repository">https://github.com/ros-controls/ros_control</url>

  <author>Wim Meeussen</author>
  <author>Adolfo Rodriguez Tsouroukdissian</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
</package>
