<package>
  <name>joint_state_controller</name>
  <version>0.0.1</version>
  <description>
    Controller to publish joint state
  </description>
  <author>Wim Meeussen</author>
  <maintainer email="wim@hidof.com">Wim Meeussen</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/joint_state_controller</url>

  <build_depend>catkin</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>controller_interface</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>controller_interface</run_depend>

  <export>
    <controller_interface plugin="${prefix}/joint_state_plugin.xml" />
  </export>

</package>
