<package>
  <name>realtime_utils</name>
  <version>0.0.1</version>
  <description>
    Utilities for realtime systems
  </description>
  <author>Wim Meeussen</author>
  <maintainer email="wim@hidof.com">Wim Meeussen</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/realtime_utils</url>

  <build_depend>catkin</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
</package>
