<package>
  <name>ros_control</name>
  <version>0.9.4</version>
  <description>A set of packages that include controller interfaces, controller managers, transmissions, hardware_interfaces and the control_toolbox.</description>

  <maintainer email="adolfo.rodriguez@pal-robotics.com">Adolfo Rodriguez Tsouroukdissian</maintainer>
  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/ros_control</url>
  <url type="bugtracker">https://github.com/ros-controls/ros_control/issues</url>
  <url type="repository">https://github.com/ros-controls/ros_control/</url>

  <author>Wim Meeussen</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>joint_limits_interface</run_depend>
  <run_depend>transmission_interface</run_depend>
  <run_depend>realtime_tools</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>controller_interface</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>controller_manager_tests</run_depend>
  <run_depend>controller_manager_msgs</run_depend>
  <run_depend>control_toolbox</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
