<package format="2">
  <name>ros_control</name>
  <version>0.13.3</version>
  <description>A set of packages that include controller interfaces, controller managers, transmissions and hardware_interfaces.</description>

  <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>
  <maintainer email="enrique.fernandez.perdomo@gmail.com">Enrique Fernandez</maintainer>
  <maintainer email="mathias.luedtke@ipa.fraunhofer.de">Mathias Lüdtke</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/ros_control</url>
  <url type="bugtracker">https://github.com/ros-controls/ros_control/issues</url>
  <url type="repository">https://github.com/ros-controls/ros_control/</url>

  <author>Wim Meeussen</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>joint_limits_interface</exec_depend>
  <exec_depend>transmission_interface</exec_depend>
  <exec_depend>realtime_tools</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>controller_interface</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>controller_manager_tests</exec_depend>
  <exec_depend>controller_manager_msgs</exec_depend>
  <exec_depend>combined_robot_hw</exec_depend>
  <exec_depend>combined_robot_hw_tests</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
